--- a/MauTransport/templates/register.html
+++ b/MauTransport/templates/register.html
@@ -1,4 +1,5 @@
 <head>
+  <h1>Register Page</h1>
   {% load static %}
   <link rel="website icon" type="png" href="{% static 'images/g-logo.png' %}">
   <link rel="stylesheet" href="{% static 'css/register.css' %}">
