--- a/MauTransport/templates/login.html
+++ b/MauTransport/templates/login.html
@@ -1,4 +1,5 @@
 <head>
+  <h1>Login Page</h1>
   {% load static %}
   <link rel="website icon" type="png" href="{% static 'images/g-logo.png' %}">
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
